# sql-server-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  claude-progress.txt  claude.md  docker-compose.prod.yml  docker-compose.yml  feature_list.json  init.sh  pyproject.toml  requirements.txt  setup.sh  update.sh
.claude/: settings.local.json
scripts/init-db/: 01_create_test_database.sql
src/sql_server_mcp/: __init__.py  __main__.py  config.py  database.py  server.py  validation.py
src/sql_server_mcp/tools/: __init__.py  databases.py  functions.py  procedures.py  queries.py  search.py  tables.py  views.py
tests/: __init__.py  conftest.py  test_validation.py
